# odilia

./: Cargo.toml
atspi-sys/: Cargo.toml
atspi-sys/src/: event.rs  lib.rs  registry.rs
atspi/src/: registry.rs
input/: Cargo.toml
input/src/: lib.rs
logging/: Cargo.toml
logging/src/: lib.rs  tracing_tree_layer.rs
plugins/: Cargo.toml  README.md
plugins/src/: config.rs  lib.rs
src/: a11y.rs  lib.rs  logging.rs  main.rs  registry.rs  state.rs
src/logging/: tracing_tree_layer.rs
tts/: Cargo.toml
tts/src/: lib.rs  speaker.rs
