[package]
name = "logging"
version = "0.1.0"
authors = ["Michael Connor Buchan <mikey@blindcomputing.org>", "Tait Hoyem <tait@tait.tech>", "Alberto Tirla <albertotirla@gmail.com>"]
description = "logging utilities for the Odilia screen reader."
license = "gpl-3" # Not gpl-3-or-later
repository = "https://github.com/odilia-app/odilia"
homepage = "https://odilia.app"
keywords = ["logging", "tracing", "instrumentation", "logger"]
categories = ["accessibility", "api-bindings"]
edition = "2021"
publish = false

[dependencies]

tracing-subscriber = { version = "0.3.8", features = ["parking_lot", "env-filter"] }
tracing-tree = "0.2.0"